Fri May 26 13:16:48 UTC 2006  Nanbor Wang  <nanbor@exothermic.txcorp.com>

        * ace/DLL_Manager.cpp:
        
          Fixed incorrect usage of ACE::debug check.  Thanks to Johnny for
          reporting this.

Fri May 26 15:04:55 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ASNMP/tests/Counter_Test.cpp:
        * ASNMP/tests/Gauge_Test.cpp:
        * performance-tests/SCTP/hist.cpp:

          Added static_cast<>s to eliminate implicit conversion warnings.

Fri May 26 12:42:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Naming_Test.cpp:
          Replaced assert with if statement, resolved argument not used
          warning in BCB6 release builds

Fri May 26 10:26:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1890_Regression_Test.cpp:
        * tests/Bug_2540_Regression_Test.cpp:
          New tests made by Carlos O'Ryan for the given bug numbers.

        * tests/run_test.lst:
        * tests/tests.mpc:
          Added the new tests above

Fri May 26 09:53:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/Run_Test.pm:
          Increased wait_interval_for_process_creation from 5 to 10 seconds.
          On the slower systems some tests failed because the startup time
          is longer then 5 seconds, especially if several configuration files
          are read and saved during startup

Fri May 26 08:21:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds.pl:
          Fixed typo in comment

Thu May 25 04:58:44 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Tokens_Test.cpp (run_main): Don't try to spawn the
          netsvcs/server/main if it's not built.

Thu May 25 03:53:47 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:

          Removed AH_TEMPLATE for ACE_LACKS_TCP_H.  This was replaced
          with ACE_LACKS_NETINET_TCP_H long ago.
